--- a/Credits.html
+++ b/Credits.html
@@ -1,7 +1,8 @@
 <style>
     body {
+        color: #333;
         font-family: "LucidaGrande";
-        font-size:13px;
+        font-size: 13px;
     }
 </style>
 
