--- a/Credits.html
+++ b/Credits.html
@@ -2,18 +2,39 @@
     body {
         color: #333;
         font-family: "LucidaGrande";
+        font-size: 11px;
+        padding-left: 1em;
+    }
+    .divider {
         font-size: 13px;
+        text-align: center;
     }
 </style>
 
-<br>
+<br />
 
 <p>
-This infernal machine was fabricated by
-<a href="http://www.atomic-mutant.com/">Atomic Mutant Heavy Industries</a>,
-with code written by
-<a href="http://andrewschleifer.name/">Andrew&nbsp;Schleifer</a>,
-some other code borrowed from
+This infernal machine was originally fabricated by
+<a href="http://andrewschleifer.name/">Andrew&nbsp;Schleifer</a>
+with some code borrowed from
 <a href="http://www.wilshipley.com/">Wil&nbsp;Shipley</a>,
 and a few good icons designed by
 <a href="http://somerandomdude.com/">P.J.&nbsp;Onori</a>.
+
+<p class="divider" />
+&bull;&nbsp;&bull;&nbsp;&bull;
+
+<p>
+Licensed under the Apache License, Version 2.0 (the "License"); you may not
+use this program except in compliance with the License. You may obtain a copy
+of the License at:
+
+<p>
+<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
+
+<p>
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+License for the specific language governing permissions and limitations under
+the License.
